# felix-the-intelligent-calendar

./: .gitignore  Cargo.toml  README.md
felix-backend/: Cargo.toml
felix-backend/felix-collections/: Cargo.toml
felix-backend/felix-collections/src/: lib.rs
felix-backend/felix-collections/src/activity/: activity_computation_data.rs  activity_metadata.rs  mod.rs
felix-backend/felix-collections/src/entity/: entities.rs
felix-backend/felix-collections/src/group/: groups.rs  mod.rs
felix-backend/felix-collections/src/work_hours/: mod.rs  work_intervals.rs
felix-backend/felix-computation-api/: Cargo.toml
felix-backend/felix-computation-api/benches/: autoinsert.rs  compute_insertion_costs.rs  conflicts_computation.rs  find_possible_beginnings.rs
felix-backend/felix-computation-api/src/: autoinsert.rs  compute_insertion_costs.rs  filter_insertion_times_for_conflicts.rs  find_possible_beginnings.rs  lib.rs
felix-backend/felix-computation-api/src/structs/: activity_computation_static_data.rs  insertion_costs.rs  mod.rs  sum_and_duration_indexes.rs  work_hour_in_minutes.rs
felix-backend/felix-computation-api/tests/: autoinsert.rs  compute_insertion_costs.rs  conflicts_computation.rs  find_possible_beginnings.rs
felix-backend/felix-datatypes/: Cargo.toml
felix-backend/felix-datatypes/src/: lib.rs  rgba.rs
felix-backend/felix-datatypes/src/activity/: mod.rs
felix-backend/felix-datatypes/src/computation_structs/: work_hours_and_activity_durations_sorted.rs
felix-backend/felix-datatypes/src/insertion_cost/: mod.rs
felix-backend/felix-datatypes/tests/: tests.rs
felix-backend/felix-errors/: Cargo.toml
felix-backend/felix-errors/src/: does_not_exist.rs  empty_name.rs  lib.rs  not_enough_time.rs
felix-backend/felix-errors/tests/: add_entity_to_inserted_activity_invalid_spot.rs  already_in.rs  change_work_hours_while_activity_inserted.rs  interval_overlaps.rs  invalid_insertion.rs  name_taken.rs  not_in.rs
felix-backend/felix-test-utils/: Cargo.toml
felix-backend/felix-test-utils/src/: data_builder.rs  data_builder_components.rs  lib.rs
felix-backend/felix-test-utils/tests/: tests.rs
felix-backend/src/: lib.rs  mod.rs  tmp
felix-backend/src/components/: mod.rs
felix-backend/src/components/entity/: mod.rs  (+2 more)
felix-backend/src/computation_structs/: insertion_cost.rs  work_hours_and_activity_durations_sorted.rs
felix-backend/src/data/: mod.rs  thread_pool.rs
felix-backend/src/errors/: add_entity_to_inserted_activity_invalid_spot.rs  add_entity_to_inserted_activity_spot_taken.rs  already_in.rs  change_work_hours_while_activity_inserted.rs  does_not_exist.rs  duration_too_short.rs  interval_overlaps.rs  invalid_insertion.rs  invalid_interval.rs  mod.rs  name_taken.rs  not_enough_time.rs  not_in.rs
felix-backend/src/events/: mod.rs
felix-backend/test-utils/: Cargo.toml
felix-backend/test-utils/src/: data_builder.rs  data_builder_components.rs  lib.rs  test_macros.rs
felix-backend/test-utils/tests/: tests.rs
felix-backend/tests/: tests.rs
felix-backend/tests/activities/: activities.rs  entities_related.rs  groups_related.rs  work_hours_related.rs
felix-backend/tests/entities/: activities_related.rs  entities.rs  groups_related.rs  work_hours_related.rs
felix-backend/tests/errors/: add_entity_to_inserted_activity_invalid_spot.rs  add_entity_to_inserted_activity_spot_taken.rs  already_in.rs  change_work_hours_while_activity_inserted.rs  does_not_exist.rs  duration_too_short.rs  empty_name.rs  interval_overlaps.rs  invalid_insertion.rs  invalid_interval.rs  name_taken.rs  not_enough_time.rs  not_in.rs
felix-backend/tests/groups/: activities_related.rs  entities_related.rs  groups.rs
felix-backend/tests/time/: custom_work_hours.rs  time.rs  time_interval.rs  work_hours.rs
felix-data/felix-errors/: Cargo.toml
felix-data/felix-errors/src/: add_entity_to_inserted_activity_invalid_spot.rs  already_in.rs  change_work_hours_while_activity_inserted.rs  invalid_insertion.rs  lib.rs
felix-data/felix-errors/tests/: does_not_exist.rs  duration_too_short.rs  empty_name.rs  invalid_interval.rs  not_enough_time.rs
felix-data/felix-export-api/: Cargo.toml
felix-data/felix-export-api/src/: lib.rs  line.rs  lines_from_activities.rs  pdf_sizes.rs  tests.rs
felix-data/felix-export-api/tests/: make_printable_data.rs
felix-gtk/: Cargo.toml  build.rs
felix-gtk/res/: resources.xml
felix-gtk/res/ui/: activity_insertion.ui  data_window.ui  main_window.ui  settings_window.ui  time_interval.ui
felix-gtk/src/: config.rs  main.rs
felix-gtk/src/app/: app_builder.rs  macros.rs  mod.rs  notify.rs  save_state.rs
plan-backend/: Cargo.toml
plan-backend/src/: lib.rs
plan-backend/src/data/: mod.rs
plan-backend/src/errors/: already_in.rs  does_not_exist.rs  duration_too_short.rs  empty_name.rs  interval_overlaps.rs  invalid_interval.rs  mod.rs  name_taken.rs  not_enough_time.rs  not_in.rs
plan-backend/test-utils/: Cargo.toml
plan-backend/test-utils/src/: data_builder.rs  lib.rs
plan-backend/test-utils/tests/: tests.rs
plan-backend/tests/: activities.rs  entities_except_work_hours.rs  entities_work_hours.rs  groups.rs  tests.rs  work_hours.rs
plan-backend/tests/activities/: activities.rs  basic.rs  entities_related.rs  groups_related.rs
plan-backend/tests/entities/: activities_related.rs  basic.rs  entities.rs  groups_related.rs  work_hours_related.rs
plan-backend/tests/errors/: already_in.rs  does_not_exist.rs  duration_too_short.rs  empty_name.rs  interval_overlaps.rs  invalid_interval.rs  name_taken.rs  not_enough_time.rs  not_in.rs
plan-backend/tests/groups/: activities_related.rs  entities_related.rs  groups.rs
plan-backend/tests/time/: time.rs  time_interval.rs  work_hours.rs
plan-backend/tests/work_hours/: work_hours.rs
plan-gtk/: .gitignore  Cargo.toml
plan-gtk/res/: resources.xml
plan-gtk/res/ui/: activity_insertion.ui  activity_insertion_area.ui  data_window.ui  insertion_grid.ui  main_window.ui  time_interval.ui
plan-gtk/src/: config.rs  main.rs
plan-gtk/src/app/: app_builder.rs  macros.rs  mod.rs  notify.rs
(+407 files in other folders)
