[package]
name = "felix-backend"
version = "0.1.0"
authors = ["Paul Constant <constantpaul@hotmail.fr>"]
edition = "2018"
workspace = "../"

[dependencies]
felix-computation-api = { path = "felix-computation-api" }
gettext-rs = { git = "https://github.com/Koka/gettext-rs", features = ["gettext-system"] }
paste = "1.0.4"
num_cpus = "1.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "1.6.4"

[dev-dependencies]
test-utils = { path = "test-utils" }
assert-not-modified = "1.0.0"
