[package]
name = "felix-backend"
version = "0.1.0"
authors = ["Paul Constant <constantpaul@hotmail.fr>"]
edition = "2018"
workspace = "../"

[dependencies]
felix-computation-api = { path = "felix-computation-api" }
felix-collections = { path = "felix-collections" }
felix-datatypes = { path = "felix-datatypes" }
felix-errors = { path = "felix-errors" }

gettext-rs = { git = "https://github.com/Koka/gettext-rs", features = ["gettext-system"] }
paste = "1.0.4"
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
felix-test-utils = { path = "felix-test-utils" }
assert-not-modified = "1.0.0"
