[package]
name = "plan-backend"
version = "0.1.0"
authors = ["Paul Constant <constantpaul@hotmail.fr>"]
edition = "2018"
workspace = "../"

[dependencies]
gettext-rs = { git = "https://github.com/Koka/gettext-rs", features = ["gettext-system"] }

[dev-dependencies]
test-utils = { path = "test-utils" }
assert-not-modified = "1.0.0"
