[package]
name = "felix-collections"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
felix-computation-api = { path = "../felix-computation-api" }
felix-datatypes = { path = "../felix-datatypes" }
felix-errors = { path = "../felix-errors" }

serde = { version = "1.0", features = ["derive", "rc"] }
num_cpus = "1.0"
rayon = "1.5"
