[package]
name = "felix-computation-api"
version = "0.1.0"
authors = ["Paul Constant <constantpaul@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.4.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "activities_computation"
harness = false
