[package]
name = "felix-computation-api"
version = "0.1.0"
authors = ["Paul Constant <constantpaul@hotmail.fr>"]
edition = "2018"
workspace = "../../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.4.2"
num_cpus = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "find_possible_beginnings"
harness = false

[[bench]]
name = "compute_insertion_costs"
harness = false

[[bench]]
name = "autoinsert"
harness = false
