[package]
name = "felix-errors"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { git = "https://github.com/Koka/gettext-rs", features = ["gettext-system"] }
felix-datatypes = { path = "../felix-datatypes" }
