[package]
name = "felix-export-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
felix-datatypes = { path = "../felix-datatypes" }
felix-collections = { path = "../felix-collections" }
cairo-rs = { version = "0.9", features = ["pdf", "embed-lgpl-docs"] }
